Reading barcodes page working

--- a/Simple QR Code Maker/Simple QR Code Maker.csproj
+++ b/Simple QR Code Maker/Simple QR Code Maker.csproj
@@ -26,6 +26,7 @@
     <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Controls\TextBorder.xaml" />
     <None Remove="Views\ShellPage.xaml" />
   </ItemGroup>
 
@@ -52,6 +53,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Controls\TextBorder.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <ItemGroup Condition="'$(DisableMsixProjectCapabilityAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
