--- a/Simple QR Code Maker/Simple QR Code Maker.csproj
+++ b/Simple QR Code Maker/Simple QR Code Maker.csproj
@@ -31,6 +31,7 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Controls\IconAndTextButton.xaml" />
     <None Remove="Controls\NewFile1.txt" />
     <None Remove="Controls\TextBorder.xaml" />
     <None Remove="Views\ShellPage.xaml" />
@@ -61,6 +62,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Page Update="Controls\IconAndTextButton.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Update="Controls\TextBorder.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
